@@ -34,6 +34,7 @@ requires    'Moose::Role';
 requires    'MooseX::MultiInitArg';
 requires    'namespace::autoclean'      => 0.09;
 requires    'Net::OAuth'                => 0.25;
+requires    'Scalar::Util';
 requires    'URI'                       => 1.40;
 requires    'URI::Escape';
 requires    'Try::Tiny'                 => 0.03;
